# FT-Quadruped-Locomotion

./: .gitignore  CMakeLists.txt  LICENSE  README.md
algorithm/: cimpc.cpp  cimpc.h  joystick_interpreter.cpp  joystick_interpreter.h
config/: cimpc_config.json  joint_ctrl_config.json
demo/: flip_cimpc.cpp
models/unitree_a1/: a1.xml
test/: test_contact_solver.cpp  test_cro.cpp  test_pin.cpp  test_sim.cpp
